# aware-npc-chat

./: .example.env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: sync-HF-space.yml
DOCS/: TROUBLESHOOTING.md
src/: app.py  config.py
src/agents/: character_chat.py  personalized_agent.py
src/agents/prompt_templates/: emotional_chatting.py  example_prompt_template.py
src/agents/utils/: stream.py
src/knowledge_base/: logger.py
src/knowledge_base/models/: entities.py  fandom_xml_tags.py  knowledge_base.py  relationships.py
src/knowledge_base/parser/: fandom.py
src/knowledge_base/parser/fandom/: __init__.py  bridge_site_to_kb.py  parse_dump.py
src/knowledge_base/utils/: archive_handler.py  downloader.py  regex.py  serializer.py  url.py
src/static/: kb_asimov.json
src/tools/: kb_query.py  scraping.py
tests/unit_test/test_parser/: test_fandom_parser_models.py
tests/unit_test/test_utils/: test_url.py
tests/unit_test/test_utils/test_regex/: test_fandom_categories.py
